Input always receive focus

--- a/src/components/ActionBar/style.scss
+++ b/src/components/ActionBar/style.scss
@@ -4,4 +4,9 @@
   padding: 20px;
   display: flex;
   justify-content: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  left: 0;
+  box-sizing: border-box;
 }
