--- a/src/components/ChatWrapper/styles.scss
+++ b/src/components/ChatWrapper/styles.scss
@@ -1,20 +1,22 @@
+@import "variables.scss";
+
 .chat-wrapper {
   display: flex;
   flex-direction: column;
-  padding: 25px;
-  margin-bottom: 120px;
+  padding: $p-4;
+  margin-bottom: $m-36;
 }
 
 .message-group {
   display: flex;
-  margin: 10px;
+  margin: $m-3;
 
   &_theme_robot {
     justify-content: flex-start;
 
     .message {
-      background-color: #f1f0f0;
-      color: #1b1b1b;
+      background-color: $color-beige;
+      color: $color-blackish;
     }
   }
 
@@ -22,24 +24,24 @@
     justify-content: flex-end;
 
     .message {
-      background-color: #ee2e5d;
-      color: #fff4f4;
+      background-color: $color-pink;
+      color: $color-beige;
     }
   }
 }
 
 .message {
-  padding: 15px 20px;
+  padding: $p-4 $p-5;
   margin: 0;
-  font-size: 16px;
+  font-size: $font-regular;
   line-height: 1.5rem;
-  margin-bottom: 5px;
+  margin-bottom: $m-1;
   text-align: left;
 }
 
 .message-group_theme_robot .message {
-  background-color: #f1f0f0;
-  color: #1b1b1b;
+  background-color: $color-beige;
+  color: $color-blackish;
 }
 
 .message-group_theme_robot .message:first-of-type {
