--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -1,32 +1,34 @@
+@import "variables.scss";
+
 .text-input {
   background-color: transparent;
   border: 0;
   outline: none;
-  font-size: 26px;
+  font-size: $font-bigger;
   font-family: "Montserrat";
-  color: #333333;
-  border-bottom: 1px solid #8c8c8c;
-  padding: 10px;
+  color: $color-dark-grey;
+  border-bottom: 1px solid $color-dark-grey;
+  padding: $p-2;
   flex-grow: 1;
-  margin-right: 20px;
+  margin-right: $m-5;
 }
 
 .text-input::placeholder {
-  color: #8c8c8c;
+  color: $color-dark-grey;
   text-transform: lowercase;
 }
 
 .button {
-  padding: 20px 35px;
-  background-color: #ee2e5d;
-  color: white;
+  padding: $p-5 $p-9;
+  background-color: $color-pink;
+  color: $color-white;
   border-radius: 30px;
-  font-size: 15px;
-  font-family: "Montserrat";
+  font-size: $font-regular;
+  font-family: $font-family;
   text-transform: uppercase;
   border: 0;
   font-weight: bold;
-  margin: 0 5px;
+  margin: 0 $m-1;
 }
 
 .button:hover {
@@ -41,8 +43,8 @@
 }
 
 .button:disabled {
-  background-color: #bdbdbd;
-  color: #5d5d5d;
+  background-color: $color-light-grey;
+  color: $color-dark-grey;
 }
 
 @keyframes zoom {
