--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,6 +5,7 @@ $font-small: 0.75rem;
 $font-regular: 1rem;
 $font-big: 1.25rem;
 $font-bigger: 1.5rem;
+$font-biggest: 1.75rem;
 
 $color-white: white;
 $color-pink: #ee2e5d;
@@ -40,7 +41,7 @@ $m-11: 2.75rem;
 $m-12: 3rem;
 $m-18: 4.5rem;
 $m-24: 6rem;
-$m-36: 9rem;
+$m-48: 12rem;
 
 $w-1: 0.25rem;
 $w-2: 0.5rem;
