--- a/src/components/ChatWrapper/styles.scss
+++ b/src/components/ChatWrapper/styles.scss
@@ -4,12 +4,16 @@
   display: flex;
   flex-direction: column;
   padding: $p-4;
-  margin-bottom: $m-36;
+  margin-bottom: $m-48;
 }
 
 .message-group {
   display: flex;
-  margin: $m-3;
+  margin: $m-3 0;
+
+  @media only screen and (min-width: 600px) {
+    margin: $m-3;
+  }
 
   &_theme_robot {
     justify-content: flex-start;
@@ -63,5 +67,8 @@
 .message-group__messages {
   display: flex;
   flex-direction: column;
-  max-width: 70%;
+
+  @media only screen and (min-width: 600px) {
+    max-width: 70%;
+  }
 }
